--- a/includes/style.css
+++ b/includes/style.css
@@ -50,6 +50,15 @@ h1 {
 /* Now Playing box */
 #app {
     /* background: linear-gradient(to bottom left, #C0CFB2 10%, #8BA989 80%); */
+    /* padding-top: 50px; */
+    margin-top: 40px;
+    margin: 0 auto;
+    height: 60vh;
+    width: 60vw;
+    color: #364F3C;
+    border: 4px solid blue;
+    position: relative;
+    top: 20px;
 }
   
 #player {
@@ -63,6 +72,13 @@ h1 {
     box-shadow: 5px 5px 15px rgba(54, 79, 60, 0.4);
 }
 
+.music {
+    height: 60vh;
+    width: 60vw;
+    background-color: blue;
+    color: #364F3C;
+    border: 4px solid blue;
+}
 
 .album {
     background: linear-gradient(rgba(54, 79, 60, 0.25), rgba(73, 101, 77, 0.55)), url("http://4.bp.blogspot.com/-pcPjBBdE_K8/U7v4oEX3M8I/AAAAAAAAD2I/6dWyzgiPzkQ/s1600/Clean+BAndit+Album+.jpg");
@@ -75,7 +91,7 @@ h1 {
 }
 
 .info {
-    height: 115px;
+    height: 75px;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -85,7 +101,7 @@ h1 {
 .progress-bar {
     height: 5px;
     width: 73%;
-    margin: 6% auto;
+    margin: 5% auto;
     background: #cdd9c2;
     border-radius: 10px;
     font-family: "Questrial", sans-serif;
@@ -136,7 +152,7 @@ h1 {
     margin-top: 5px;
 }
 
-.toggler{
+.toggler {
     z-index:2;
     height: 50px;
     width: 50px;
@@ -147,3 +163,19 @@ h1 {
     opacity: 0;
 }
   
+#back {
+    font-family: monospace;
+    border-radius: 15px;
+    background-color: #b57db9;
+    border: none;
+    color: rgb(240, 179, 246);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+#back:hover {
+    background-color: #b499b6;
+}
