--- a/includes/style.css
+++ b/includes/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: monospace;
+    font-family: monospace, sans-serif, "Questrial" ;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
     padding-bottom: 10px;
 }
 
-nav { /* navigation bar */
+nav {
     background-color: rgb(181, 181, 234);
     overflow: hidden;
     width: 70vw;
@@ -24,11 +24,11 @@ nav ul {
     text-align: center;
 }
 
-nav ul li { /* Lists that are styled */
+nav ul li { 
     display: inline-block;
 }
 
-nav ul li a { /* Links that are styled */
+nav ul li a {
     color: #5971AD;
     padding: 16px 46px;
     text-decoration: none;
@@ -51,12 +51,13 @@ h1 {
 #app {
     /* background: linear-gradient(to bottom left, #C0CFB2 10%, #8BA989 80%); */
     /* padding-top: 50px; */
-    margin-top: 40px;
+    margin-top: 60px;
     margin: 0 auto;
     height: 60vh;
     width: 60vw;
     color: #364F3C;
-    border: 4px solid blue;
+    background-color: rgb(217, 212, 218);
+    /* border: 4px solid blue; */
     position: relative;
     top: 20px;
 }
@@ -109,7 +110,7 @@ h1 {
 
 .fill {
     background-color: #8BA989;
-    height: 0.3rem;
+    height: 0.4rem;
     border-radius: 2px;
 }
 
@@ -178,4 +179,29 @@ h1 {
 
 #back:hover {
     background-color: #b499b6;
+}
+
+#year-title {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.last-seen {
+    text-align: center;
+}
+
+.playlists {
+    background-color: rgb(255, 255, 236);
+    /* border-radius: 3px; */
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+    /* width: 500px;
+    height: 400px; */
+    margin: 2rem;
+    /* margin: 0 auto; */
+
+    justify-content: space-between;
+    /* padding: 0.5rem 1rem 1rem;
+    letter-spacing: .1px;*/
+    box-sizing: border-box;
+    align-items: center; 
 }
