--- a/includes/style.css
+++ b/includes/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: monospace, sans-serif, "Questrial" ;
+    font-family: 'Helvetica', 'Arial', sans-serif ;
 }
 
 body {
@@ -110,7 +110,7 @@ h1 {
 
 .fill {
     background-color: #8BA989;
-    height: 0.4rem;
+    height: 0.3rem;
     border-radius: 2px;
 }
 
@@ -165,16 +165,15 @@ h1 {
 }
   
 #back {
-    font-family: monospace;
     border-radius: 15px;
     background-color: #b57db9;
     border: none;
     color: rgb(240, 179, 246);
-    padding: 15px 32px;
+    padding: 8px 18px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 #back:hover {
@@ -191,17 +190,32 @@ h1 {
 }
 
 #playlist-container {
-    /* display: grid; */
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    /* border: 1px solid silver; */
+    -ms-box-orient: horizontal;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
-
-    /* gap: 50px 100px; */
 }
 
 #playlist {
     width: 375px;
     height: 340px;
-    /* padding: 0; */
-    /* overflow: hidden; */
+
+    padding: 2px;
+    margin: 5px;
+    
+    line-height: 100px;
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
     margin: 0 auto;
 }
   
@@ -209,9 +223,9 @@ h1 {
     width: 500px;
     height: 450px;
     border: 0px;
-  }
+}
   
-  #scaled-frame {
+#scaled-frame {
     zoom: 0.75;
     -moz-transform: scale(0.75);
     -moz-transform-origin: 0 0;
@@ -219,10 +233,51 @@ h1 {
     -o-transform-origin: 0 0;
     -webkit-transform: scale(0.75);
     -webkit-transform-origin: 0 0;
-  }
+}
   
-  @media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio:0) {
     #scaled-frame {
-      zoom: 1;
+        zoom: 1;
     }
-  }
+}
+
+.artist-title {
+    /* background-color: #94a298; */
+    padding-left: 40px;
+    line-height: 2em;
+}
+
+#play-count {
+    line-height: 3em;
+}
+
+#artist-name {
+    font-size: 1.5em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-weight: bold;
+}
+
+#track-name {
+    font-size: 3.5em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-weight: bold;
+}
+
+.information {
+    height: 350px;
+    width: 80vw;
+    margin: 0 auto;
+    background-color: rgba(139, 178, 211, 0.45);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.album-picture {
+    float: right;
+    display: inline-block;
+}
+
+.album-information {
+    padding-top: 10px;
+    padding-right: 10px;
+}
