--- a/includes/style.css
+++ b/includes/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Helvetica', 'Arial', sans-serif ;
+    box-sizing: border-box;
 }
 
 body {
@@ -49,15 +50,14 @@ h1 {
 
 /* Now Playing box */
 #app {
-    /* background: linear-gradient(to bottom left, #C0CFB2 10%, #8BA989 80%); */
-    /* padding-top: 50px; */
+    border-radius: 10px;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
     margin-top: 60px;
     margin: 0 auto;
     height: 60vh;
     width: 60vw;
     color: #364F3C;
     background-color: rgb(217, 212, 218);
-    /* border: 4px solid blue; */
     position: relative;
     top: 20px;
 }
@@ -342,4 +342,64 @@ h1 {
 .ui-tabs .ui-tabs-nav li {
     float: none !important;
     display: inline-block;
+}
+
+.article-container {
+
+}
+
+.main-article {
+    border-radius: 10px;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+    background-color: rgb(217, 212, 218);
+    height: 300px;
+    width: 95vw;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.main-article > div {
+    flex: 50%; /* or - flex: 0 50% - or - flex-basis: 50% - */
+    /* box-shadow: 0 0 0 1px black; */
+}
+
+.main-image {
+    width: 100%;
+    text-align: center;
+    padding-top: 30px;
+    /* padding-left: 10px; */
+}
+
+.main-info {
+    width: 100%;
+    padding-top: 10px
+}
+
+.articles {
+    width: 80vw;
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    list-style: none;
+    margin: 0 auto;
+}
+
+.article {
+    background-color: rgb(217, 212, 218);
+    border-radius: 10px;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+    width: 200px;
+    height: 350px;
+    text-align: center;
+    margin: 1rem auto;
+}
+
+.article img {
+    padding-top: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
