--- a/includes/style.css
+++ b/includes/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgb(248, 242, 249);
+    background-color: rgb(248, 242, 249) !important;
 }
 
 .main-header {
@@ -24,6 +24,11 @@ body {
 
 #title-card {
     font-family: 'Monoton'
+}
+
+#top-title {
+    font-weight: bold;
+    color: #364F3C;;
 }
 
 nav {
@@ -435,6 +440,7 @@ a {
     display: flex;
     margin: 0 auto;
     width: 85vw;
+    padding-bottom: 30px;
 }
 
 .chart {
@@ -449,5 +455,29 @@ a {
 
 .charts {
     padding-top: 120px;
-
 }
+
+@media only screen and (max-width: 600px) {
+    .navigation {
+        background-color: blue;
+    }
+}
+
+.card-mb-4 {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 1rem 1rem;
+    background-color: rgb(217, 212, 218);;
+}
+
+.card-header {
+    padding: 0.5rem 1rem;
+    margin-bottom: 0;
+    background-color: rgb(246, 222, 251);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  }
